我的页面、设置页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.welcom.WelcomActivity"></activity>
+        <activity android:name=".ui.settings.SettingActivity"></activity>
     </application>
 
 </manifest>
