--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,5 +72,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
 
-//    implementation project(path: ':lib')
+    // Switch button
+    compile 'com.kyleduo.switchbutton:library:1.4.6'
+
 }
