--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         </activity>
         <activity android:name=".ui.welcom.WelcomActivity"></activity>
         <activity android:name=".ui.settings.SettingActivity"></activity>
+        <activity android:name=".ui.settings.AboutActivity"></activity>
     </application>
 
 </manifest>
