--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ allprojects {
         maven {
             url 'https://dl.bintray.com/meiyousunny/hmcx'
         }
+        maven {
+            url 'https://jitpack.io'
+        }
     }
 }
 
