首页矿机产品列表

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation 'com.hmcx:dialogger:1.0.2'
     implementation 'com.hmcx:repeatview:1.0.9'
 
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
 
