--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".ui.settings.SettingActivity"></activity>
         <activity android:name=".ui.settings.AboutActivity"></activity>
         <activity android:name=".ui.account.LoginActivity"></activity>
+        <activity android:name=".ui.extract.ExtractCoinActivity"></activity>
     </application>
 
 </manifest>
