账户信息、修改信息输入UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
         <activity android:name=".ui.settings.AboutActivity"></activity>
         <activity android:name=".ui.account.LoginActivity"></activity>
         <activity android:name=".ui.extract.ExtractCoinActivity"></activity>
+        <activity android:name=".ui.account.AccountInfoActivity"></activity>
+        <activity android:name=".ui.account.SetProfileActivity"></activity>
     </application>
 
 </manifest>
