--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".ui.extract.ExtractMoneyActivity"></activity>
         <activity android:name=".ui.extract.ExtractMoneyConfirmActivity"></activity>
         <activity android:name=".ui.account.EncryptedWalletActivity"></activity>
+        <activity android:name=".ui.order.OdersActivity"></activity>
 
     </application>
 
