--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,17 +29,17 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.home.HomeActivity"
-            android:theme="@style/ThemeHome">
+            android:theme="@style/ThemeHome"></activity>
+        <activity android:name=".ui.welcom.WelcomActivity"></activity>
+        <activity android:name=".ui.settings.SettingActivity"></activity>
+        <activity android:name=".ui.settings.AboutActivity"></activity>
+        <activity android:name=".ui.account.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.welcom.WelcomActivity"></activity>
-        <activity android:name=".ui.settings.SettingActivity"></activity>
-        <activity android:name=".ui.settings.AboutActivity"></activity>
-        <activity android:name=".ui.account.LoginActivity"></activity>
         <activity android:name=".ui.extract.ExtractCoinActivity"></activity>
         <activity android:name=".ui.account.AccountInfoActivity"></activity>
         <activity android:name=".ui.account.SetProfileActivity"></activity>
