--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name=".ui.extract.ExtractMoneyConfirmActivity"></activity>
         <activity android:name=".ui.account.EncryptedWalletActivity"></activity>
         <activity android:name=".ui.order.OdersActivity"></activity>
+        <activity android:name=".ui.webpage.WebPageActivity"></activity>
 
     </application>
 
