--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.account.ModifyPwdActivity"></activity>
         <activity android:name=".ui.extract.ExtractCoinActivity"></activity>
         <activity android:name=".ui.account.AccountInfoActivity"></activity>
         <activity android:name=".ui.account.SetProfileActivity"></activity>
