--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -32,11 +32,15 @@ dependencies {
 
 //    implementation 'com.hmcx:mvp:1.0.3'
     implementation 'com.hmcx:rxandroid:1.0.6'
-    implementation 'com.hmcx:dialogger:1.0.2'
-    implementation 'com.hmcx:repeatview:1.0.9'
+//    implementation 'com.hmcx:dialogger:1.0.2'
+//    implementation 'com.hmcx:repeatview:1.0.9'
     implementation 'com.hmcx:dollar:1.0.1'
     implementation 'io.reactivex:rxjava:1.2.7'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation 'de.greenrobot:eventbus:3.0.0-beta1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.hmcx:http:1.0.6'
+    implementation 'com.hmcx:okhttp:1.0.6'
+    implementation 'com.hmcx:rxjava:1.0.6'
 }
