--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
     implementation 'com.hmcx:rxandroid:1.0.6'
     implementation 'com.hmcx:dialogger:1.0.2'
     implementation 'com.hmcx:repeatview:1.0.9'
+    implementation 'com.hmcx:http:1.0.6'
+    implementation 'com.hmcx:okhttp:1.0.6'
+    implementation 'com.hmcx:rxjava:1.0.6'
 
     implementation 'com.github.bumptech.glide:glide:3.8.0'
 
