--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,12 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenLocal()
+//        mavenLocal()
         maven {
             url 'https://jitpack.io'
         }
+        mavenLocal()
+        mavenCentral()
         maven {
             url 'https://maven.aliyun.com/repository/public'
         }
